--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,40 +1,58 @@
-# This is a basic workflow to help you get started with Actions
+name: Upload QEMU tarball
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  upload-qemu:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # 1. 拉取仓库，并开启 Git LFS 支持
       - uses: actions/checkout@v4
+        with:
+          lfs: true
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
+      # 2. 安装 Git LFS
+      - name: Install Git LFS
+        run: |
+          sudo apt update && sudo apt install -y git-lfs
+          git lfs install
+
+      # 3. 下载 QEMU
+      - name: Download QEMU
         run: wget https://download.qemu.org/qemu-7.0.0.tar.xz
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # 4. 设置 Git LFS 跟踪，并提交到主分支
+      - name: Commit and push via Git LFS
         run: |
-          git status
-          git add .
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git commit -m "tyest"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+          echo "*.tar.xz filter=lfs diff=lfs merge=lfs -text" >> .gitattributes
+          git add .gitattributes
+          git lfs track "*.tar.xz"
+
+          git add qemu-7.0.0.tar.xz
+          git commit -m "Add QEMU tarball via Git LFS" || echo "Nothing to commit"
           git push origin main
+
+      # 5. 上传为 GitHub Actions Artifact
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: qemu-archive
+          path: qemu-7.0.0.tar.xz
+
+      # 6. 上传为 GitHub Release 附件（自动创建一个 Release）
+      - name: Upload to GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: qemu-7.0.0
+          name: "QEMU 7.0.0 Release"
+          body: "Auto-uploaded QEMU 7.0.0 tarball via CI"
+          files: qemu-7.0.0.tar.xz
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
